--- a/public/style.css
+++ b/public/style.css
@@ -84,7 +84,19 @@ span.price {
   }
 }
 
-#judul h1{
+.judul {
   font-size: 100px;
   margin-bottom: 20px;
+}
+
+.innerimage{
+  overflow:hidden;
+}
+
+.innerimage img{
+  transition: all 1.5s ease;
+}
+
+.inner:hover img{
+  transform: scale(1.5);
 }
