--- a/public/style/order.css
+++ b/public/style/order.css
@@ -9,6 +9,11 @@
   font-size: 14px;
   font-weight: bold;
 }
+.order-form-check-label {
+  margin: 8px 0 0 0;
+  font-size: 14px;
+  font-weight: bold;
+}
 
 .order-form-input {
   width: 100%;
